--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -b master -d docs"
   },
+  "homepage": "https://tand826.github.io/works",
   "eslintConfig": {
     "extends": "react-app"
   },
