--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "react-scripts build && rm -rf docs && mv build docs && gh-pages -d docs"
+    "deploy": "react-scripts build && rm -rf docs && mv build docs"
   },
   "homepage": "https://tand826.github.io/works",
   "eslintConfig": {
